2022-10-08T01:53:39Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3208713965
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 46 166 / 57 183
* notice: next accum: outdated-unq outdated-all / unq all: 47 170 / 57 186
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-23] / []

2022-10-07T16:35:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3206276103
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 46 166 / 57 185
* notice: next accum: outdated-unq outdated-all / unq all: 46 166 / 57 183
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -2 / +1 +4 -0 -3 / 1 1
* notice: removed / changed dates: [] / [2022-09-23]

2022-10-07T08:30:01Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203348722
* notice: last 14d: unq all: 2 19
* notice: prev accum: outdated-unq outdated-all / unq all: 46 166 / 57 186
* notice: next accum: outdated-unq outdated-all / unq all: 46 166 / 57 185
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +4 -0 -1 / 1 3
* notice: removed / changed dates: [] / [2022-09-23]

2022-10-06T16:35:59Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3198885092
* notice: last 14d: unq all: 2 20
* notice: prev accum: outdated-unq outdated-all / unq all: 45 164 / 57 185
* notice: next accum: outdated-unq outdated-all / unq all: 46 166 / 57 186
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-22] / []

2022-10-06T08:30:41Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195690905
* notice: last 14d: unq all: 2 21