@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-08T01:53:39Z",
-  "count_outdated" : 170,
-  "uniques_outdated" : 47,
+  "timestamp" : "2022-10-08T16:30:41Z",
+  "count_outdated" : 171,
+  "uniques_outdated" : 48,
   "count" : 186,
   "uniques" : 57,
   "clones" : [
-    {
-      "timestamp": "2022-09-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-25T00:00:00Z",
       "count": 1,
