@@ -1,3 +1,11 @@
+2022-10-08T16:30:41Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3211059650
+* notice: last 14d: unq all: 2 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 47 170 / 57 186
+* notice: next accum: outdated-unq outdated-all / unq all: 48 171 / 57 186
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-24] / []
+
 2022-10-08T01:53:39Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3208713965
 * notice: last 14d: unq all: 2 16
